tests/snapshots/query_snapshots__fine_grained_point_call_query.snap
---
source: tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    (function_declaration
      name: (simple_identifier) @name0
      (#eq? @name0 "update")
      (function_body
        (statements
          (call_expression
            (navigation_expression
              ((simple_identifier) @target
                (#eq? @target "queue")))))))))
