tests/snapshots/query_snapshots__fine_grained_point_identifier_meta.snap
---
source: tests/query_snapshots.rs
expression: snapshot
---
name: fine_grained_point_identifier
fixture: complex_scenarios.swift
strategy: Unified
range: "33:14"
node_type: value_binding_pattern
query: "[query stored in separate _query.snap file]"
