tests/snapshots/query_snapshots__fine_grained_point_identifier_query.snap
---
source: tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    ((function_declaration
      name: (simple_identifier) @fn_name
      (#eq? @fn_name "update")) @target)))
