tests/snapshots/query_snapshots__fine_grained_point_self_meta.snap
---
source: tests/query_snapshots.rs
expression: snapshot
---
name: fine_grained_point_self
strategy: FineGrained
range: "29:23"
node_type: simple_identifier
query: "[query stored in .scm file]"
