tests/snapshots/query_snapshots__fine_grained_private_let_meta.snap
---
source: tests/query_snapshots.rs
expression: snapshot
---
name: fine_grained_private_let
fixture: complex_scenarios.swift
strategy: Unified
range: "21"
node_type: property_declaration
query: "[query stored in separate _query.snap file]"
