tests/snapshots/query_snapshots__fine_grained_property_wrapper_query.snap
---
source: tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  name: (type_identifier) @name0
  (#eq? @name0 "ComplexViewModel")
  (class_body
    (property_declaration
      name: (pattern) @fn_name
      (#eq? @fn_name "identifier")) @target))
