tests/snapshots/query_snapshots__fine_grained_range_closure_query.snap
---
source: tests/query_snapshots.rs
expression: result.query
---
(function_declaration
  name: (simple_identifier) @name0
  (#eq? @name0 "update")
  (function_body
    (statements
      ((call_expression
        (_) @func
        (#eq? @func "queue.async")) @target))))
